Fixed the portait image slide overflow problem

--- a/public_html/css/style.scss
+++ b/public_html/css/style.scss
@@ -766,6 +766,7 @@ span.link {
 .landscape, .portrait{
     width: 100%;
     height: auto;
+    max-width: 710px;
 
     img{
         width: 100%;
@@ -788,10 +789,10 @@ span.link {
   top: 50%;
   width: auto;
   margin-top: -22px;
-  padding: 16px;
+  padding: 10px;
   color: #fff;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 10px;
   transition: ease 400ms;
   border-radius: 0 3px 3px 0;
   background-color: rgba(0,0,0,0.2);
@@ -1050,12 +1051,17 @@ footer{
     }
 
     .portrait{
-        height: 600px;
+        height: 500px;
 
         img{
             height: 100%;
             width: auto;
         }
+    }
+
+    .prev, .next{
+        padding: 16px;
+        font-size: 16px;
     }
 
 }
@@ -1385,7 +1391,6 @@ footer{
     .how-slideshow{
         .slideshow-container{
             max-height: 700px;
-            overflow: hidden;
         }
 
         .popup-content-wrapper{
@@ -1557,7 +1562,6 @@ footer{
     .how-slideshow{
         .slideshow-container{
             max-height: 1000px;
-            overflow: hidden;
         }
 
         .popup-content-wrapper{
